# shortpwd

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  shortpwd
