[metadata]
name = shortpwd
description = Print current working dir to stdout, but shorten it if needed.
description-file = README.md
author = tilboerner
author-email = tilboerner
license = MIT

[pbr]
skip_authors = true
skip_changelog = true

[tool:pytest]
norecursedirs = venv .tox .eggs
addopts =

[pydocstyle]
add_ignore = D1,D400,D413
match = (?!setup).*.py
match-dir = (?!test|venv|docs|\.).*

[isort]
atomic = True
combine_as_imports = true
multi_line_output = 5
line_length = 88
skip = docs,venv,.tox,.eggs
not_skip = __init__.py
known_first_party = shortpwd
default_section=THIRDPARTY

[flake8]
max-line-length = 88
select = C,E,F,W,B
ignore = E203
doctests = true
statistics = true
show-source = true
exclude = .tox,.eggs
